--- a/desafios/d012/estilo/style.css
+++ b/desafios/d012/estilo/style.css
@@ -57,6 +57,10 @@ section{
     font-size: 3.5vw;
 }
 
+section > p{
+    padding-bottom: 2em;
+}
+
 section.normal{
     background-color: white;
     color: black;
@@ -71,6 +75,18 @@ section.imagem > p{
     display: inline-block;
     padding: 5px;
     background-color: rgba(26, 26, 26, 0.499);
+    text-shadow: 1px 1px 0px black;
+}
+
+section#img01{
+    background-image: url(../imagens/background001.jpg);
+    background-position: right center;
+    background-size: cover;
+}
+
+section#img02{
+    background-image: url(../imagens/background002.jpg);
+    background-size: cover;
 }
 
 footer{
