--- a/exercicios/ex026/mq002/estilos/style.css
+++ b/exercicios/ex026/mq002/estilos/style.css
@@ -1,3 +1,21 @@
 @charset "UTF-8 ";
 
 /* Configurações Gerais */
+
+*{
+    margin: 0px;
+    padding: 0px;
+}
+
+html, body{
+    width: 100vw;
+    height: 100vh;
+    background-color: #233eff;
+    background-size: contain;
+    background-repeat: no-repeat;
+}
+
+h1{
+    padding: 10px;
+    text-shadow: 2px 2px 0px  rgb(88, 88, 170);
+}
